Fix gaps in the gallery

--- a/app/assets/stylesheets/gallery.scss
+++ b/app/assets/stylesheets/gallery.scss
@@ -5,8 +5,8 @@
     img { max-width: none; }
     li {
       overflow: hidden;
-      width: 230px;
-      height: 240px;
+      width: 194px;
+      height: 210px;
       margin: 0 1px 1px 0;
     }
     a {
